# tchux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
server/: Cargo.toml
src/: client.rs  main.rs  server.rs  tui_client.rs
src/client/: mod.rs  tui.rs
src/server/: handler.rs  mod.rs
src/utils/: mod.rs  types.rs
testing/: test.py
