[package]
name = "tchux"
version = "0.1.2"
edition = "2021"
authors = [
  "maverik-io <github.com/maverik-io",
  "zochlas <github.com/zochlas"
]
license = "MIT OR Apache-2.0"
description = "LAN chat app"
readme = "README.md"
repository = "https://github.com/zochlas/tchux"
keywords = ["cli", "chat","lan"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.22"
simplelog = "0.12.2"
uuid = { version="1.10.0", features=["v4"]}
ctrlc = "3.4.5"
base64 = "0.22.1"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
