[package]
name = "tchux"
version = "0.2.0"
edition = "2021"
authors = [
  "mavenried <github.com/mavenried",
  "zochlas <github.com/zochlas"
]
license = "MIT OR Apache-2.0"
description = "LAN chat app"
readme = "README.md"
repository = "https://github.com/tuxcrp/tchux"
keywords = ["tui", "chat","lan"]
categories = ["command-line-utilities"]

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.100"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
ctrlc = "3.5.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
aes-gcm = "0.10.3"
sha2 = "0.10.9"
base64 = "0.22.1"
chrono = "0.4.42"


